2009-12-16  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	[ 2818014 ] EnumerateClasses segfault w/DeepInheritance prop setting
	(refix)

2009-12-15  Surendra Kodali  

        * ABTScript
        [ 2893373 ] Test reports need to include xml results files

2009-12-15  Sean Swehla  <smswehla@linux.vnet.ibm.com>

	* interopServerProvider.c
	[ 2915198 ] Interop Server Provider returns incorrect object

2009-12-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, providerMgr.h:
	[ 2914435 ] providers should receive param info from providerRegister

	* classProviderGz.c, default.reg.in:
	[ 2914484 ] classProviderGz's cacheLimit should be tunable at runtime

2009-12-11  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2910372 ] Provider user and params strdup'd but never free'd

	* support.c, sfcBroker.c, providerRegister.h, providerRegister.c:
	[ 2913067 ] Unused arg for newProviderRegister()

2009-12-09 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>
	* test/xmltest/execQuery24/25.*,enumerateInstanceNames.SFCB_IndicationServiceCapabilities.*, enumerateInstances.SFCB_IndicationServiceCapabilities.*, test/unittests/newDateTime.c, test/unittests/Makefile.am
	[  2859885 ] New exec query and enumeration test cases

2009-12-07 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, 
	  test/TestProviders/tests/IndTest3CreateSubscription.lines,IndTest3CreateSubscription.xml,
	    IndTest5DeleteSubscription.xml,
	  test/xmltest/Indication03CreateSubscription.OK, Indication11DeleteSubscription.xml:
	[ 2908421 ] IndicationProfile: IndicationSubscription - RI props
		Change classname when CIM_IndicationSubscription is created.

2009-12-04  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* result.c:
	Repealed original fix for 2818014

	* result.c:
	[ 2900630 ] Allow for instances > chunkSize when chunking enabled
	
2009-12-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
