@@ -13,6 +13,7 @@ New features:
 - 2908421 IndicationProfile: IndicationSubscription - RI props
 - 2914435 providers should receive param info from providerRegister
 - 2914484 classProviderGz's cacheLimit should be tunable at runtime
+- 2908423 Honor DeliveryRetry* props of CIM_IndicationService
 
 Bugs fixed:
 
